# ChaosHeadNoah-HQ

./: .gitattributes  .gitignore  .gitmodules  Readme.md  asset_paths.example.py  docker-compose.override.example.yml  docker-compose.yml  pyproject.toml  xbox_mv_mapping.txt
docs/: credits.md  transcode_notes.md
mapping/: CRI File Tools c0data.csv  Readme.md  steam_bg_mapping.txt  steam_mv_mapping.txt  xbox_bg_mapping.ods
scripts/: ffmpeg.py  fix_csv_ids.py  garbo_to_ngs.py  map_bg_xbox_switch.py  movie_screenshot.py  ngs_to_mp4.py  print_file_names.py  remove_cc_bg_images.py  steambg_to_webp.py  steammv_to_mp4.py  steamvoice_to_flac.py  switchvoice_to_flac.py  utils.py  xbox_garbo_to_name.py
