[tool.poetry]
name = "ChaosHeadNoahHQ"
version = "0.1.0"
description = ""
authors = ["Peter DeVita <mewtwo2643@yahoo.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.10"
odfpy = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
